--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: ['main']
+    branches: ['main', 'testMerge']
   pull_request:
-    branches: ['main']
+    branches: ['main', 'testMerge']
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
